--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 
 <body>
+  <div id="plump-robin"></div>
 
   <!-- Load React. -->
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+  <!-- Load our React component. -->
+  <script type="text/babel" src="plump-robin.js"></script>
 </body>
 
 </html>
