--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <!-- Load our React component. -->
+  <script type="text/babel" src="js/components/CompetitorList.js"></script>
+  <script type="text/babel" src="js/components/CompetitorCollector.js"></script>
+  <script type="text/babel" src="js/components/ScheduleDetails.js"></script>
+  <script type="text/babel" src="js/components/ScheduleGenerator.js"></script>
+  <script type="text/babel" src="js/components/App.js"></script>
   <script type="text/babel" src="plump-robin.js"></script>
 </body>
 
