More styling and UI work.

--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
 </head>
 
 <body>
-  <header class="p-3 mb-2 bg-primary text-white">
-    <h1>Plump Robin</h1>
-    <h2>A Round-Robin Tournament Schedule Generator</h2>
-  </header>
-  <main class="p-3" style="margin-bottom: 7.25rem">
-    <div id="plump-robin"></div>
-  </main>
-  <footer class="p-3 mb-2 bg-dark text-info fixed-bottom">
-    <p>
-      <small>A project built during
-        <a class="badge badge-pill badge-secondary"
-          href="https://twitter.com/search?q=%23100daysofcode">#100DaysOfCode.</a></small><br>
-      <small>Created by <a class="badge badge-pill badge-secondary" href="https://github.com/rgroves">Robert
-          Groves</a></small><br>
-      <small>Created with 💖 and
-        <a class="badge badge-pill badge-secondary" href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a>,
-        <a class="badge badge-pill badge-secondary" href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a>,
-        <a class="badge badge-pill badge-secondary"
-          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a>,
-        <a class="badge badge-pill badge-secondary" href="https://getbootstrap.com/">Bootstrap</a>,
-        <a class="badge badge-pill badge-secondary" href="https://reactjs.org/">React</a>,
-        <a class="badge badge-pill badge-secondary" href="https://babeljs.io/">Babel</a>
-      </small>
-    </p>
-  </footer>
+  <div class="d-flex flex-column min-vh-100">
+    <header class=" p-3 mb-2 bg-primary text-white">
+      <h1>Plump Robin</h1>
+      <h2>A Round-Robin Tournament Schedule Generator</h2>
+    </header>
+    <main class="p-3 flex-fill">
+      <div id="plump-robin"></div>
+    </main>
+    <footer class="p-3 bg-dark text-info">
+      <p>
+        <small>A project built during
+          <a class="badge badge-pill badge-secondary"
+            href="https://twitter.com/search?q=%23100daysofcode">#100DaysOfCode.</a></small><br>
+        <small>Created by <a class="badge badge-pill badge-secondary" href="https://github.com/rgroves">Robert
+            Groves</a></small><br>
+        <small>Created with 💖 and
+          <a class="badge badge-pill badge-secondary" href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</a>,
+          <a class="badge badge-pill badge-secondary" href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a>,
+          <a class="badge badge-pill badge-secondary"
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a>,
+          <a class="badge badge-pill badge-secondary" href="https://getbootstrap.com/">Bootstrap</a>,
+          <a class="badge badge-pill badge-secondary" href="https://reactjs.org/">React</a>,
+          <a class="badge badge-pill badge-secondary" href="https://babeljs.io/">Babel</a>
+        </small>
+      </p>
+    </footer>
+  </div>
 
   <!-- Load React. -->
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
