--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <!-- Load our React component. -->
+  <script type="text/babel" src="js/util/roundRobinScheduler.js"></script>
   <script type="text/babel" src="js/components/CompetitorList.js"></script>
   <script type="text/babel" src="js/components/CompetitorCollector.js"></script>
   <script type="text/babel" src="js/components/ScheduleDetails.js"></script>
