--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 <body>
   <div class="d-flex flex-column min-vh-100">
     <header class=" p-3 mb-2 bg-primary text-white">
-      <h1>Plump Robin</h1>
-      <h2>A Round-Robin Tournament Schedule Generator</h2>
+      <div class="d-flex flex-wrap justify-content-center align-items-center">
+        <img src="img/plump-robin.svg" alt="" class="mx-3" style="height: 7rem;">
+        <div>
+          <h1>Plump Robin</h1>
+          <h2>A Round-Robin Tournament Schedule Generator</h2>
+        </div>
+      </div>
     </header>
     <main class="p-3 flex-fill">
       <div id="plump-robin"></div>
@@ -36,6 +41,11 @@
           <a class="badge badge-pill badge-secondary" href="https://getbootstrap.com/">Bootstrap</a>,
           <a class="badge badge-pill badge-secondary" href="https://reactjs.org/">React</a>,
           <a class="badge badge-pill badge-secondary" href="https://babeljs.io/">Babel</a>
+        </small><br>
+        <small>Plump Robin logo by
+          <a class="badge badge-pill badge-secondary" href="https://www.instagram.com/marycollieart/">
+            @marycollieart
+          </a>
         </small>
       </p>
     </footer>
